# neuralnetwork

./: requirements.txt
c++/: .clang-format  CMakeLists.txt  Makefile  readme.md
c++/.github/workflows/: ci.yml  lint.yml  test.yml
c++/include/: layer.h  linear.h  loss.h  model.h  ops.h  optimizer.h  shape.h  tensor.h
c++/src/: linear.cpp  model.cpp  optimizer.cpp  tensor.cpp
notebooks/: datapy.ipynb  mnist_scratch.ipynb  modelpy.ipynb  trainpy.ipynb
src/: data.py  model.py  train.py
